Correct spacing for rules and footer for certain screen sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,7 +90,7 @@ p {
 }
 
 .rules {
-    margin-top: -250px;
+    margin-top: -150px;
 }
 
 .user{
